ProyectoFinalDLP/src/sintactico/y.output
   0  $accept : program $end

   1  program : definiciones

   2  definiciones : definiciones definicion
   3               |

   4  definicion : defFuncion
   5             | defVariable
   6             | defStruct

   7  defVariablesOpt : defVariablesOpt defVariable
   8                  |

   9  defVariable : "VAR" "IDENT" ':' tipo ';'

  10  defFuncion : "IDENT" '(' parametrosOpt ')' ':' tipo '{' defVariablesOpt sentenciasOpt '}'
  11             | "IDENT" '(' parametrosOpt ')' '{' defVariablesOpt sentenciasOpt '}'

  12  parametrosOpt : defParametros
  13                |

  14  defParametros : defParametros ',' defParametro
  15                | defParametro

  16  defParametro : "IDENT" ':' tipoSimple

  17  defStruct : "STRUCT" "IDENT" '{' camposOpt '}' ';'

  18  camposOpt : camposOpt defCampo
  19            |

  20  defCampo : "IDENT" ':' tipo ';'

  21  tipo : tipoSimple
  22       | "IDENT"
  23       | '[' "LITENT" ']' tipo

  24  tipoSimple : "INT"
  25             | "REAL"
  26             | "CHAR"

  27  sentenciasOpt : sentenciasOpt sentencia
  28                |

  29  sentencia : "PRINT" expresion ';'
  30            | "PRINTSP" expresion ';'
  31            | "PRINTLN" expresion ';'
  32            | "READ" expresion ';'
  33            | expresion '=' expresion ';'
  34            | "IF" '(' expresion ')' '{' sentenciasOpt '}'
  35            | "IF" '(' expresion ')' '{' sentenciasOpt '}' "ELSE" '{' sentenciasOpt '}'
  36            | "WHILE" '(' expresion ')' '{' sentenciasOpt '}'
  37            | "RETURN" expresion ';'
  38            | "RETURN" ';'
  39            | "IDENT" '(' expresionesOpt ')' ';'

  40  expresionesOpt : expresiones
  41                 |

  42  expresiones : expresiones ',' expresion
  43              | expresion

  44  expresion : "LITENT"
  45            | "LITREAL"
  46            | "IDENT"
  47            | "LITCHAR"
  48            | expresion '+' expresion
  49            | expresion '-' expresion
  50            | expresion '<' expresion
  51            | expresion '>' expresion
  52            | expresion '*' expresion
  53            | expresion '/' expresion
  54            | expresion '.' "IDENT"
  55            | expresion "MAYORIGUALQUE" expresion
  56            | expresion "MENORIGUALQUE" expresion
  57            | expresion "AND" expresion
  58            | expresion "OR" expresion
  59            | expresion "DISTINTO" expresion
  60            | expresion "IGUALQUE" expresion
  61            | '-' expresion
  62            | '!' expresion
  63            | '(' expresion ')'
  64            | "IDENT" '(' expresionesOpt ')'
  65            | expresion '[' expresion ']'
  66            | "CAST" '<' tipo '>' '(' expresion ')'

state 0
	$accept : . program $end  (0)
	definiciones : .  (3)

	.  reduce 3

	program  goto 1
	definiciones  goto 2


state 1
	$accept : program . $end  (0)

	$end  accept


state 2
	program : definiciones .  (1)
	definiciones : definiciones . definicion  (2)

	"VAR"  shift 3
	"IDENT"  shift 4
	"STRUCT"  shift 5
	$end  reduce 1

	definicion  goto 6
	defFuncion  goto 7
	defVariable  goto 8
	defStruct  goto 9


state 3
	defVariable : "VAR" . "IDENT" ':' tipo ';'  (9)

	"IDENT"  shift 10
	.  error


state 4
	defFuncion : "IDENT" . '(' parametrosOpt ')' ':' tipo '{' defVariablesOpt sentenciasOpt '}'  (10)
	defFuncion : "IDENT" . '(' parametrosOpt ')' '{' defVariablesOpt sentenciasOpt '}'  (11)

	'('  shift 11
	.  error


state 5
	defStruct : "STRUCT" . "IDENT" '{' camposOpt '}' ';'  (17)

	"IDENT"  shift 12
	.  error


state 6
	definiciones : definiciones definicion .  (2)

	.  reduce 2


state 7
	definicion : defFuncion .  (4)

	.  reduce 4


state 8
	definicion : defVariable .  (5)

	.  reduce 5


state 9
	definicion : defStruct .  (6)

	.  reduce 6


state 10
	defVariable : "VAR" "IDENT" . ':' tipo ';'  (9)

	':'  shift 13
	.  error


state 11
	defFuncion : "IDENT" '(' . parametrosOpt ')' ':' tipo '{' defVariablesOpt sentenciasOpt '}'  (10)
	defFuncion : "IDENT" '(' . parametrosOpt ')' '{' defVariablesOpt sentenciasOpt '}'  (11)
	parametrosOpt : .  (13)

	"IDENT"  shift 14
	')'  reduce 13

	parametrosOpt  goto 15
	defParametros  goto 16
	defParametro  goto 17


state 12
	defStruct : "STRUCT" "IDENT" . '{' camposOpt '}' ';'  (17)

	'{'  shift 18
	.  error


state 13
	defVariable : "VAR" "IDENT" ':' . tipo ';'  (9)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"REAL"  shift 22
	"CHAR"  shift 23
	.  error

	tipo  goto 24
	tipoSimple  goto 25


state 14
	defParametro : "IDENT" . ':' tipoSimple  (16)

	':'  shift 26
	.  error


state 15
	defFuncion : "IDENT" '(' parametrosOpt . ')' ':' tipo '{' defVariablesOpt sentenciasOpt '}'  (10)
	defFuncion : "IDENT" '(' parametrosOpt . ')' '{' defVariablesOpt sentenciasOpt '}'  (11)

	')'  shift 27
	.  error


state 16
	parametrosOpt : defParametros .  (12)
	defParametros : defParametros . ',' defParametro  (14)

	','  shift 28
	')'  reduce 12


state 17
	defParametros : defParametro .  (15)

	.  reduce 15


state 18
	defStruct : "STRUCT" "IDENT" '{' . camposOpt '}' ';'  (17)
	camposOpt : .  (19)

	.  reduce 19

	camposOpt  goto 29


state 19
	tipo : '[' . "LITENT" ']' tipo  (23)

	"LITENT"  shift 30
	.  error


state 20
	tipo : "IDENT" .  (22)

	.  reduce 22


state 21
	tipoSimple : "INT" .  (24)

	.  reduce 24


state 22
	tipoSimple : "REAL" .  (25)

	.  reduce 25


state 23
	tipoSimple : "CHAR" .  (26)

	.  reduce 26


state 24
	defVariable : "VAR" "IDENT" ':' tipo . ';'  (9)

	';'  shift 31
	.  error


state 25
	tipo : tipoSimple .  (21)

	.  reduce 21


state 26
	defParametro : "IDENT" ':' . tipoSimple  (16)

	"INT"  shift 21
	"REAL"  shift 22
	"CHAR"  shift 23
	.  error

	tipoSimple  goto 32


state 27
	defFuncion : "IDENT" '(' parametrosOpt ')' . ':' tipo '{' defVariablesOpt sentenciasOpt '}'  (10)
	defFuncion : "IDENT" '(' parametrosOpt ')' . '{' defVariablesOpt sentenciasOpt '}'  (11)

	':'  shift 33
	'{'  shift 34
	.  error


state 28
	defParametros : defParametros ',' . defParametro  (14)

	"IDENT"  shift 14
	.  error

	defParametro  goto 35


state 29
	defStruct : "STRUCT" "IDENT" '{' camposOpt . '}' ';'  (17)
	camposOpt : camposOpt . defCampo  (18)

	"IDENT"  shift 36
	'}'  shift 37
	.  error

	defCampo  goto 38


state 30
	tipo : '[' "LITENT" . ']' tipo  (23)

	']'  shift 39
	.  error


state 31
	defVariable : "VAR" "IDENT" ':' tipo ';' .  (9)

	.  reduce 9


state 32
	defParametro : "IDENT" ':' tipoSimple .  (16)

	.  reduce 16


state 33
	defFuncion : "IDENT" '(' parametrosOpt ')' ':' . tipo '{' defVariablesOpt sentenciasOpt '}'  (10)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"REAL"  shift 22
	"CHAR"  shift 23
	.  error

	tipo  goto 40
	tipoSimple  goto 25


state 34
	defFuncion : "IDENT" '(' parametrosOpt ')' '{' . defVariablesOpt sentenciasOpt '}'  (11)
	defVariablesOpt : .  (8)

	.  reduce 8

	defVariablesOpt  goto 41


state 35
	defParametros : defParametros ',' defParametro .  (14)

	.  reduce 14


state 36
	defCampo : "IDENT" . ':' tipo ';'  (20)

	':'  shift 42
	.  error


state 37
	defStruct : "STRUCT" "IDENT" '{' camposOpt '}' . ';'  (17)

	';'  shift 43
	.  error


state 38
	camposOpt : camposOpt defCampo .  (18)

	.  reduce 18


state 39
	tipo : '[' "LITENT" ']' . tipo  (23)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"REAL"  shift 22
	"CHAR"  shift 23
	.  error

	tipo  goto 44
	tipoSimple  goto 25


state 40
	defFuncion : "IDENT" '(' parametrosOpt ')' ':' tipo . '{' defVariablesOpt sentenciasOpt '}'  (10)

	'{'  shift 45
	.  error


state 41
	defVariablesOpt : defVariablesOpt . defVariable  (7)
	defFuncion : "IDENT" '(' parametrosOpt ')' '{' defVariablesOpt . sentenciasOpt '}'  (11)
	sentenciasOpt : .  (28)

	"VAR"  shift 3
	'-'  reduce 28
	'!'  reduce 28
	'('  reduce 28
	"IDENT"  reduce 28
	'}'  reduce 28
	"LITENT"  reduce 28
	"PRINT"  reduce 28
	"PRINTSP"  reduce 28
	"PRINTLN"  reduce 28
	"READ"  reduce 28
	"IF"  reduce 28
	"WHILE"  reduce 28
	"RETURN"  reduce 28
	"LITREAL"  reduce 28
	"LITCHAR"  reduce 28
	"CAST"  reduce 28

	defVariable  goto 46
	sentenciasOpt  goto 47


state 42
	defCampo : "IDENT" ':' . tipo ';'  (20)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"REAL"  shift 22
	"CHAR"  shift 23
	.  error

	tipo  goto 48
	tipoSimple  goto 25


state 43
	defStruct : "STRUCT" "IDENT" '{' camposOpt '}' ';' .  (17)

	.  reduce 17


state 44
	tipo : '[' "LITENT" ']' tipo .  (23)

	.  reduce 23


state 45
	defFuncion : "IDENT" '(' parametrosOpt ')' ':' tipo '{' . defVariablesOpt sentenciasOpt '}'  (10)
	defVariablesOpt : .  (8)

	.  reduce 8

	defVariablesOpt  goto 49


state 46
	defVariablesOpt : defVariablesOpt defVariable .  (7)

	.  reduce 7


state 47
	defFuncion : "IDENT" '(' parametrosOpt ')' '{' defVariablesOpt sentenciasOpt . '}'  (11)
	sentenciasOpt : sentenciasOpt . sentencia  (27)

	'-'  shift 50
	'!'  shift 51
	'('  shift 52
	"IDENT"  shift 53
	'}'  shift 54
	"LITENT"  shift 55
	"PRINT"  shift 56
	"PRINTSP"  shift 57
	"PRINTLN"  shift 58
	"READ"  shift 59
	"IF"  shift 60
	"WHILE"  shift 61
	"RETURN"  shift 62
	"LITREAL"  shift 63
	"LITCHAR"  shift 64
	"CAST"  shift 65
	.  error

	sentencia  goto 66
	expresion  goto 67


state 48
	defCampo : "IDENT" ':' tipo . ';'  (20)

	';'  shift 68
	.  error


state 49
	defVariablesOpt : defVariablesOpt . defVariable  (7)
	defFuncion : "IDENT" '(' parametrosOpt ')' ':' tipo '{' defVariablesOpt . sentenciasOpt '}'  (10)
	sentenciasOpt : .  (28)

	"VAR"  shift 3
	'-'  reduce 28
	'!'  reduce 28
	'('  reduce 28
	"IDENT"  reduce 28
	'}'  reduce 28
	"LITENT"  reduce 28
	"PRINT"  reduce 28
	"PRINTSP"  reduce 28
	"PRINTLN"  reduce 28
	"READ"  reduce 28
	"IF"  reduce 28
	"WHILE"  reduce 28
	"RETURN"  reduce 28
	"LITREAL"  reduce 28
	"LITCHAR"  reduce 28
	"CAST"  reduce 28

	defVariable  goto 46
	sentenciasOpt  goto 69


state 50
	expresion : '-' . expresion  (61)

	'-'  shift 50
	'!'  shift 51
	'('  shift 52
	"IDENT"  shift 70
	"LITENT"  shift 55
	"LITREAL"  shift 63
	"LITCHAR"  shift 64
	"CAST"  shift 65
	.  error

	expresion  goto 71


state 51
	expresion : '!' . expresion  (62)

	'-'  shift 50
	'!'  shift 51
	'('  shift 52
	"IDENT"  shift 70
	"LITENT"  shift 55
	"LITREAL"  shift 63
	"LITCHAR"  shift 64
	"CAST"  shift 65
	.  error

	expresion  goto 72


state 52
	expresion : '(' . expresion ')'  (63)

	'-'  shift 50
	'!'  shift 51
	'('  shift 52
	"IDENT"  shift 70
	"LITENT"  shift 55
	"LITREAL"  shift 63
	"LITCHAR"  shift 64
	"CAST"  shift 65
	.  error

	expresion  goto 73


state 53
	sentencia : "IDENT" . '(' expresionesOpt ')' ';'  (39)
	expresion : "IDENT" .  (46)
	expresion : "IDENT" . '(' expresionesOpt ')'  (64)

	'('  shift 74
	'='  reduce 46
	"OR"  reduce 46
	"AND"  reduce 46
	'<'  reduce 46
	'>'  reduce 46
	"MENORIGUALQUE"  reduce 46
	"MAYORIGUALQUE"  reduce 46
	"IGUALQUE"  reduce 46
	"DISTINTO"  reduce 46
	'+'  reduce 46
	'-'  reduce 46
	'*'  reduce 46
	'/'  reduce 46
	'['  reduce 46
	'.'  reduce 46


state 54
	defFuncion : "IDENT" '(' parametrosOpt ')' '{' defVariablesOpt sentenciasOpt '}' .  (11)

	.  reduce 11


state 55
	expresion : "LITENT" .  (44)

	.  reduce 44


state 56
	sentencia : "PRINT" . expresion ';'  (29)

	'-'  shift 50
	'!'  shift 51
	'('  shift 52
	"IDENT"  shift 70
	"LITENT"  shift 55
	"LITREAL"  shift 63
	"LITCHAR"  shift 64
	"CAST"  shift 65
	.  error

	expresion  goto 75


state 57
	sentencia : "PRINTSP" . expresion ';'  (30)

	'-'  shift 50
	'!'  shift 51
	'('  shift 52
	"IDENT"  shift 70
	"LITENT"  shift 55
	"LITREAL"  shift 63
	"LITCHAR"  shift 64
	"CAST"  shift 65
	.  error

	expresion  goto 76


state 58
	sentencia : "PRINTLN" . expresion ';'  (31)

	'-'  shift 50
	'!'  shift 51
	'('  shift 52
	"IDENT"  shift 70
	"LITENT"  shift 55
	"LITREAL"  shift 63
	"LITCHAR"  shift 64
	"CAST"  shift 65
	.  error

	expresion  goto 77


state 59
	sentencia : "READ" . expresion ';'  (32)

	'-'  shift 50
	'!'  shift 51
	'('  shift 52
	"IDENT"  shift 70
	"LITENT"  shift 55
	"LITREAL"  shift 63
	"LITCHAR"  shift 64
	"CAST"  shift 65
	.  error

	expresion  goto 78


state 60
	sentencia : "IF" . '(' expresion ')' '{' sentenciasOpt '}'  (34)
	sentencia : "IF" . '(' expresion ')' '{' sentenciasOpt '}' "ELSE" '{' sentenciasOpt '}'  (35)

	'('  shift 79
	.  error


state 61
	sentencia : "WHILE" . '(' expresion ')' '{' sentenciasOpt '}'  (36)

	'('  shift 80
	.  error


state 62
	sentencia : "RETURN" . expresion ';'  (37)
	sentencia : "RETURN" . ';'  (38)

	'-'  shift 50
	'!'  shift 51
	'('  shift 52
	"IDENT"  shift 70
	';'  shift 81
	"LITENT"  shift 55
	"LITREAL"  shift 63
	"LITCHAR"  shift 64
	"CAST"  shift 65
	.  error

	expresion  goto 82


state 63
	expresion : "LITREAL" .  (45)

	.  reduce 45


state 64
	expresion : "LITCHAR" .  (47)

	.  reduce 47


state 65
	expresion : "CAST" . '<' tipo '>' '(' expresion ')'  (66)

	'<'  shift 83
	.  error


state 66
	sentenciasOpt : sentenciasOpt sentencia .  (27)

	.  reduce 27


state 67
	sentencia : expresion . '=' expresion ';'  (33)
	expresion : expresion . '+' expresion  (48)
	expresion : expresion . '-' expresion  (49)
	expresion : expresion . '<' expresion  (50)
	expresion : expresion . '>' expresion  (51)
	expresion : expresion . '*' expresion  (52)
	expresion : expresion . '/' expresion  (53)
	expresion : expresion . '.' "IDENT"  (54)
	expresion : expresion . "MAYORIGUALQUE" expresion  (55)
	expresion : expresion . "MENORIGUALQUE" expresion  (56)
	expresion : expresion . "AND" expresion  (57)
	expresion : expresion . "OR" expresion  (58)
	expresion : expresion . "DISTINTO" expresion  (59)
	expresion : expresion . "IGUALQUE" expresion  (60)
	expresion : expresion . '[' expresion ']'  (65)

	'='  shift 84
	"OR"  shift 85
	"AND"  shift 86
	'<'  shift 87
	'>'  shift 88
	"MENORIGUALQUE"  shift 89
	"MAYORIGUALQUE"  shift 90
	"IGUALQUE"  shift 91
	"DISTINTO"  shift 92
	'+'  shift 93
	'-'  shift 94
	'*'  shift 95
	'/'  shift 96
	'['  shift 97
	'.'  shift 98
	.  error


state 68
	defCampo : "IDENT" ':' tipo ';' .  (20)

	.  reduce 20


state 69
	defFuncion : "IDENT" '(' parametrosOpt ')' ':' tipo '{' defVariablesOpt sentenciasOpt . '}'  (10)
	sentenciasOpt : sentenciasOpt . sentencia  (27)

	'-'  shift 50
	'!'  shift 51
	'('  shift 52
	"IDENT"  shift 53
	'}'  shift 99
	"LITENT"  shift 55
	"PRINT"  shift 56
	"PRINTSP"  shift 57
	"PRINTLN"  shift 58
	"READ"  shift 59
	"IF"  shift 60
	"WHILE"  shift 61
	"RETURN"  shift 62
	"LITREAL"  shift 63
	"LITCHAR"  shift 64
	"CAST"  shift 65
	.  error

	sentencia  goto 66
	expresion  goto 67


state 70
	expresion : "IDENT" .  (46)
	expresion : "IDENT" . '(' expresionesOpt ')'  (64)

	'('  shift 100
	'='  reduce 46
	"OR"  reduce 46
	"AND"  reduce 46
	'<'  reduce 46
	'>'  reduce 46
	"MENORIGUALQUE"  reduce 46
	"MAYORIGUALQUE"  reduce 46
	"IGUALQUE"  reduce 46
	"DISTINTO"  reduce 46
	'+'  reduce 46
	'-'  reduce 46
	'*'  reduce 46
	'/'  reduce 46
	'['  reduce 46
	']'  reduce 46
	'.'  reduce 46
	')'  reduce 46
	';'  reduce 46
	','  reduce 46


state 71
	expresion : expresion . '+' expresion  (48)
	expresion : expresion . '-' expresion  (49)
	expresion : expresion . '<' expresion  (50)
	expresion : expresion . '>' expresion  (51)
	expresion : expresion . '*' expresion  (52)
	expresion : expresion . '/' expresion  (53)
	expresion : expresion . '.' "IDENT"  (54)
	expresion : expresion . "MAYORIGUALQUE" expresion  (55)
	expresion : expresion . "MENORIGUALQUE" expresion  (56)
	expresion : expresion . "AND" expresion  (57)
	expresion : expresion . "OR" expresion  (58)
	expresion : expresion . "DISTINTO" expresion  (59)
	expresion : expresion . "IGUALQUE" expresion  (60)
	expresion : '-' expresion .  (61)
	expresion : expresion . '[' expresion ']'  (65)

	'*'  shift 95
	'/'  shift 96
	'['  shift 97
	'.'  shift 98
	'='  reduce 61
	"OR"  reduce 61
	"AND"  reduce 61
	'<'  reduce 61
	'>'  reduce 61
	"MENORIGUALQUE"  reduce 61
	"MAYORIGUALQUE"  reduce 61
	"IGUALQUE"  reduce 61
	"DISTINTO"  reduce 61
	'+'  reduce 61
	'-'  reduce 61
	']'  reduce 61
	')'  reduce 61
	';'  reduce 61
	','  reduce 61


state 72
	expresion : expresion . '+' expresion  (48)
	expresion : expresion . '-' expresion  (49)
	expresion : expresion . '<' expresion  (50)
	expresion : expresion . '>' expresion  (51)
	expresion : expresion . '*' expresion  (52)
	expresion : expresion . '/' expresion  (53)
	expresion : expresion . '.' "IDENT"  (54)
	expresion : expresion . "MAYORIGUALQUE" expresion  (55)
	expresion : expresion . "MENORIGUALQUE" expresion  (56)
	expresion : expresion . "AND" expresion  (57)
	expresion : expresion . "OR" expresion  (58)
	expresion : expresion . "DISTINTO" expresion  (59)
	expresion : expresion . "IGUALQUE" expresion  (60)
	expresion : '!' expresion .  (62)
	expresion : expresion . '[' expresion ']'  (65)

	'.'  shift 98
	'='  reduce 62
	"OR"  reduce 62
	"AND"  reduce 62
	'<'  reduce 62
	'>'  reduce 62
	"MENORIGUALQUE"  reduce 62
	"MAYORIGUALQUE"  reduce 62
	"IGUALQUE"  reduce 62
	"DISTINTO"  reduce 62
	'+'  reduce 62
	'-'  reduce 62
	'*'  reduce 62
	'/'  reduce 62
	'['  reduce 62
	']'  reduce 62
	')'  reduce 62
	';'  reduce 62
	','  reduce 62


state 73
	expresion : expresion . '+' expresion  (48)
	expresion : expresion . '-' expresion  (49)
	expresion : expresion . '<' expresion  (50)
	expresion : expresion . '>' expresion  (51)
	expresion : expresion . '*' expresion  (52)
	expresion : expresion . '/' expresion  (53)
	expresion : expresion . '.' "IDENT"  (54)
	expresion : expresion . "MAYORIGUALQUE" expresion  (55)
	expresion : expresion . "MENORIGUALQUE" expresion  (56)
	expresion : expresion . "AND" expresion  (57)
	expresion : expresion . "OR" expresion  (58)
	expresion : expresion . "DISTINTO" expresion  (59)
	expresion : expresion . "IGUALQUE" expresion  (60)
	expresion : '(' expresion . ')'  (63)
	expresion : expresion . '[' expresion ']'  (65)

	"OR"  shift 85
	"AND"  shift 86
	'<'  shift 87
	'>'  shift 88
	"MENORIGUALQUE"  shift 89
	"MAYORIGUALQUE"  shift 90
	"IGUALQUE"  shift 91
	"DISTINTO"  shift 92
	'+'  shift 93
	'-'  shift 94
	'*'  shift 95
	'/'  shift 96
	'['  shift 97
	'.'  shift 98
	')'  shift 101
	.  error


state 74
	sentencia : "IDENT" '(' . expresionesOpt ')' ';'  (39)
	expresion : "IDENT" '(' . expresionesOpt ')'  (64)
	expresionesOpt : .  (41)

	'-'  shift 50
	'!'  shift 51
	'('  shift 52
	"IDENT"  shift 70
	"LITENT"  shift 55
	"LITREAL"  shift 63
	"LITCHAR"  shift 64
	"CAST"  shift 65
	')'  reduce 41

	expresion  goto 102
	expresionesOpt  goto 103
	expresiones  goto 104


state 75
	sentencia : "PRINT" expresion . ';'  (29)
	expresion : expresion . '+' expresion  (48)
	expresion : expresion . '-' expresion  (49)
	expresion : expresion . '<' expresion  (50)
	expresion : expresion . '>' expresion  (51)
	expresion : expresion . '*' expresion  (52)
	expresion : expresion . '/' expresion  (53)
	expresion : expresion . '.' "IDENT"  (54)
	expresion : expresion . "MAYORIGUALQUE" expresion  (55)
	expresion : expresion . "MENORIGUALQUE" expresion  (56)
	expresion : expresion . "AND" expresion  (57)
	expresion : expresion . "OR" expresion  (58)
	expresion : expresion . "DISTINTO" expresion  (59)
	expresion : expresion . "IGUALQUE" expresion  (60)
	expresion : expresion . '[' expresion ']'  (65)

	"OR"  shift 85
	"AND"  shift 86
	'<'  shift 87
	'>'  shift 88
	"MENORIGUALQUE"  shift 89
	"MAYORIGUALQUE"  shift 90
	"IGUALQUE"  shift 91
	"DISTINTO"  shift 92
	'+'  shift 93
	'-'  shift 94
	'*'  shift 95
	'/'  shift 96
	'['  shift 97
	'.'  shift 98
	';'  shift 105
	.  error


state 76
	sentencia : "PRINTSP" expresion . ';'  (30)
	expresion : expresion . '+' expresion  (48)
	expresion : expresion . '-' expresion  (49)
	expresion : expresion . '<' expresion  (50)
	expresion : expresion . '>' expresion  (51)
	expresion : expresion . '*' expresion  (52)
	expresion : expresion . '/' expresion  (53)
	expresion : expresion . '.' "IDENT"  (54)
	expresion : expresion . "MAYORIGUALQUE" expresion  (55)
	expresion : expresion . "MENORIGUALQUE" expresion  (56)
	expresion : expresion . "AND" expresion  (57)
	expresion : expresion . "OR" expresion  (58)
	expresion : expresion . "DISTINTO" expresion  (59)
	expresion : expresion . "IGUALQUE" expresion  (60)
	expresion : expresion . '[' expresion ']'  (65)

	"OR"  shift 85
	"AND"  shift 86
	'<'  shift 87
	'>'  shift 88
	"MENORIGUALQUE"  shift 89
	"MAYORIGUALQUE"  shift 90
	"IGUALQUE"  shift 91
	"DISTINTO"  shift 92
	'+'  shift 93
	'-'  shift 94
	'*'  shift 95
	'/'  shift 96
	'['  shift 97
	'.'  shift 98
	';'  shift 106
	.  error


state 77
	sentencia : "PRINTLN" expresion . ';'  (31)
	expresion : expresion . '+' expresion  (48)
	expresion : expresion . '-' expresion  (49)
	expresion : expresion . '<' expresion  (50)
	expresion : expresion . '>' expresion  (51)
	expresion : expresion . '*' expresion  (52)
	expresion : expresion . '/' expresion  (53)
	expresion : expresion . '.' "IDENT"  (54)
	expresion : expresion . "MAYORIGUALQUE" expresion  (55)
	expresion : expresion . "MENORIGUALQUE" expresion  (56)
	expresion : expresion . "AND" expresion  (57)
	expresion : expresion . "OR" expresion  (58)
	expresion : expresion . "DISTINTO" expresion  (59)
	expresion : expresion . "IGUALQUE" expresion  (60)
	expresion : expresion . '[' expresion ']'  (65)

	"OR"  shift 85
	"AND"  shift 86
	'<'  shift 87
	'>'  shift 88
	"MENORIGUALQUE"  shift 89
	"MAYORIGUALQUE"  shift 90
	"IGUALQUE"  shift 91
	"DISTINTO"  shift 92
	'+'  shift 93
	'-'  shift 94
	'*'  shift 95
	'/'  shift 96
	'['  shift 97
	'.'  shift 98
	';'  shift 107
	.  error


state 78
	sentencia : "READ" expresion . ';'  (32)
	expresion : expresion . '+' expresion  (48)
	expresion : expresion . '-' expresion  (49)
	expresion : expresion . '<' expresion  (50)
	expresion : expresion . '>' expresion  (51)
	expresion : expresion . '*' expresion  (52)
	expresion : expresion . '/' expresion  (53)
	expresion : expresion . '.' "IDENT"  (54)
	expresion : expresion . "MAYORIGUALQUE" expresion  (55)
	expresion : expresion . "MENORIGUALQUE" expresion  (56)
	expresion : expresion . "AND" expresion  (57)
	expresion : expresion . "OR" expresion  (58)
	expresion : expresion . "DISTINTO" expresion  (59)
	expresion : expresion . "IGUALQUE" expresion  (60)
	expresion : expresion . '[' expresion ']'  (65)

	"OR"  shift 85
	"AND"  shift 86
	'<'  shift 87
	'>'  shift 88
	"MENORIGUALQUE"  shift 89
	"MAYORIGUALQUE"  shift 90
	"IGUALQUE"  shift 91
	"DISTINTO"  shift 92
	'+'  shift 93
	'-'  shift 94
	'*'  shift 95
	'/'  shift 96
	'['  shift 97
	'.'  shift 98
	';'  shift 108
	.  error


state 79
	sentencia : "IF" '(' . expresion ')' '{' sentenciasOpt '}'  (34)
	sentencia : "IF" '(' . expresion ')' '{' sentenciasOpt '}' "ELSE" '{' sentenciasOpt '}'  (35)

	'-'  shift 50
	'!'  shift 51
	'('  shift 52
	"IDENT"  shift 70
	"LITENT"  shift 55
	"LITREAL"  shift 63
	"LITCHAR"  shift 64
	"CAST"  shift 65
	.  error

	expresion  goto 109


state 80
	sentencia : "WHILE" '(' . expresion ')' '{' sentenciasOpt '}'  (36)

	'-'  shift 50
	'!'  shift 51
	'('  shift 52
	"IDENT"  shift 70
	"LITENT"  shift 55
	"LITREAL"  shift 63
	"LITCHAR"  shift 64
	"CAST"  shift 65
	.  error

	expresion  goto 110


state 81
	sentencia : "RETURN" ';' .  (38)

	.  reduce 38


state 82
	sentencia : "RETURN" expresion . ';'  (37)
	expresion : expresion . '+' expresion  (48)
	expresion : expresion . '-' expresion  (49)
	expresion : expresion . '<' expresion  (50)
	expresion : expresion . '>' expresion  (51)
	expresion : expresion . '*' expresion  (52)
	expresion : expresion . '/' expresion  (53)
	expresion : expresion . '.' "IDENT"  (54)
	expresion : expresion . "MAYORIGUALQUE" expresion  (55)
	expresion : expresion . "MENORIGUALQUE" expresion  (56)
	expresion : expresion . "AND" expresion  (57)
	expresion : expresion . "OR" expresion  (58)
	expresion : expresion . "DISTINTO" expresion  (59)
	expresion : expresion . "IGUALQUE" expresion  (60)
	expresion : expresion . '[' expresion ']'  (65)

	"OR"  shift 85
	"AND"  shift 86
	'<'  shift 87
	'>'  shift 88
	"MENORIGUALQUE"  shift 89
	"MAYORIGUALQUE"  shift 90
	"IGUALQUE"  shift 91
	"DISTINTO"  shift 92
	'+'  shift 93
	'-'  shift 94
	'*'  shift 95
	'/'  shift 96
	'['  shift 97
	'.'  shift 98
	';'  shift 111
	.  error


state 83
	expresion : "CAST" '<' . tipo '>' '(' expresion ')'  (66)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"REAL"  shift 22
	"CHAR"  shift 23
	.  error

	tipo  goto 112
	tipoSimple  goto 25


state 84
	sentencia : expresion '=' . expresion ';'  (33)

	'-'  shift 50
	'!'  shift 51
	'('  shift 52
	"IDENT"  shift 70
	"LITENT"  shift 55
	"LITREAL"  shift 63
	"LITCHAR"  shift 64
	"CAST"  shift 65
	.  error

	expresion  goto 113


state 85
	expresion : expresion "OR" . expresion  (58)

	'-'  shift 50
	'!'  shift 51
	'('  shift 52
	"IDENT"  shift 70
	"LITENT"  shift 55
	"LITREAL"  shift 63
	"LITCHAR"  shift 64
	"CAST"  shift 65
	.  error

	expresion  goto 114


state 86
	expresion : expresion "AND" . expresion  (57)

	'-'  shift 50
	'!'  shift 51
	'('  shift 52
	"IDENT"  shift 70
	"LITENT"  shift 55
	"LITREAL"  shift 63
	"LITCHAR"  shift 64
	"CAST"  shift 65
	.  error

	expresion  goto 115


state 87
	expresion : expresion '<' . expresion  (50)

	'-'  shift 50
	'!'  shift 51
	'('  shift 52
	"IDENT"  shift 70
	"LITENT"  shift 55
	"LITREAL"  shift 63
	"LITCHAR"  shift 64
	"CAST"  shift 65
	.  error

	expresion  goto 116


state 88
	expresion : expresion '>' . expresion  (51)

	'-'  shift 50
	'!'  shift 51
	'('  shift 52
	"IDENT"  shift 70
	"LITENT"  shift 55
	"LITREAL"  shift 63
	"LITCHAR"  shift 64
	"CAST"  shift 65
	.  error

	expresion  goto 117


state 89
	expresion : expresion "MENORIGUALQUE" . expresion  (56)

	'-'  shift 50
	'!'  shift 51
	'('  shift 52
	"IDENT"  shift 70
	"LITENT"  shift 55
	"LITREAL"  shift 63
	"LITCHAR"  shift 64
	"CAST"  shift 65
	.  error

	expresion  goto 118


state 90
	expresion : expresion "MAYORIGUALQUE" . expresion  (55)

	'-'  shift 50
	'!'  shift 51
	'('  shift 52
	"IDENT"  shift 70
	"LITENT"  shift 55
	"LITREAL"  shift 63
	"LITCHAR"  shift 64
	"CAST"  shift 65
	.  error

	expresion  goto 119


state 91
	expresion : expresion "IGUALQUE" . expresion  (60)

	'-'  shift 50
	'!'  shift 51
	'('  shift 52
	"IDENT"  shift 70
	"LITENT"  shift 55
	"LITREAL"  shift 63
	"LITCHAR"  shift 64
	"CAST"  shift 65
	.  error

	expresion  goto 120


state 92
	expresion : expresion "DISTINTO" . expresion  (59)

	'-'  shift 50
	'!'  shift 51
	'('  shift 52
	"IDENT"  shift 70
	"LITENT"  shift 55
	"LITREAL"  shift 63
	"LITCHAR"  shift 64
	"CAST"  shift 65
	.  error

	expresion  goto 121


state 93
	expresion : expresion '+' . expresion  (48)

	'-'  shift 50
	'!'  shift 51
	'('  shift 52
	"IDENT"  shift 70
	"LITENT"  shift 55
	"LITREAL"  shift 63
	"LITCHAR"  shift 64
	"CAST"  shift 65
	.  error

	expresion  goto 122


state 94
	expresion : expresion '-' . expresion  (49)
